--- a/src/css/style.css
+++ b/src/css/style.css
@@ -282,21 +282,24 @@ header {
   margin-bottom: -20px; }
 
 .box-badge {
-  color: #fff203;
+  color: #ffffff;
+  text-align: center;
   background-color: #b50091;
   font-family: "Filson Soft";
   position: absolute;
   z-index: 2;
+  min-width: 120px;
+  height: 26px;
   left: 10px;
   top: 10px;
   font-size: 14px;
   font-weight: 600;
-  padding: 5px 10px;
-  border-radius: 5px;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -o-border-radius: 5px; }
+  padding: 3px 10px;
+  border-radius: 13px;
+  -webkit-border-radius: 13px;
+  -moz-border-radius: 13px;
+  -ms-border-radius: 13px;
+  -o-border-radius: 13px; }
 
 .box-details.inside::before {
   content: "";
@@ -804,6 +807,8 @@ input[type="range"]::-moz-focus-outer {
   justify-content: center;
   color: #fff;
   font-size: 32px;
+  width: 32px;
+  height: 32px;
   z-index: 2; }
 
 .carrossel-botao.esq {
@@ -1517,9 +1522,7 @@ input[type="range"]::-moz-focus-outer {
 
 .section.noticias {
   padding: 20px 0;
-  background-image: url("../images/BACKGROUND-cabeçalhos.png");
-  background-repeat: no-repeat;
-  background-position: top;
+  background: #feef0e;
   overflow: hidden;
   margin-bottom: 40px; }
 
@@ -1530,16 +1533,15 @@ input[type="range"]::-moz-focus-outer {
   position: relative;
   text-align: center; }
 
-.noticias .logo-section img {
-  margin-top: -100px; }
+.noticias .content header {
+  flex-wrap: wrap; }
 
-.noticias .logo-section .titulo {
-  position: absolute;
-  top: 0;
+.noticias .content .chapeu {
+  color: #6318af;
   width: 100%; }
 
-.noticias .logo-section .titulo h1 {
-  font-size: 48px;
+.noticias .content .chapeu h1 {
+  font-size: 46px;
   font-weight: 900; }
 
 .grid-noticias {
@@ -1547,11 +1549,20 @@ input[type="range"]::-moz-focus-outer {
   margin: 40px auto;
   padding-left: 0;
   padding-right: 0;
-  display: flex; }
+  display: grid;
+  grid-template-areas: "destaque miniatura";
+  grid-template-columns: repeat(2, 50%); }
+
+.grid-noticias .destaque {
+  grid-area: destaque; }
+
+.grid-noticias .miniaturas {
+  grid-area: miniatura; }
 
 .grid-noticias .post-item.featured {
   padding-right: 4rem;
   height: 344px;
+  margin-right: 15px;
   box-sizing: border-box; }
 
 .grid-noticias .post-item {
@@ -1565,7 +1576,6 @@ input[type="range"]::-moz-focus-outer {
   text-decoration: none;
   padding: 1rem 3rem 1rem 1rem;
   position: relative;
-  margin-right: 15px;
   margin-bottom: 20px;
   background-color: #6c6c6c;
   background-size: cover;
@@ -1610,14 +1620,16 @@ input[type="range"]::-moz-focus-outer {
     display: flex;
     flex-direction: row;
     margin: 10px 0; }
+  .grid-noticias .miniaturas {
+    display: flex;
+    flex-direction: row; }
   .featured-posts {
     width: auto;
     overflow-x: scroll;
     overflow-y: hidden;
     white-space: nowrap;
-    padding-left: 10px;
-    padding-right: 10px;
     margin-top: 0;
+    margin-bottom: 10px;
     scrollbar-color: #fff203 #6318af !important;
     scrollbar-width: thin !important; }
   .featured-posts::-webkit-scrollbar {
@@ -1630,19 +1642,23 @@ input[type="range"]::-moz-focus-outer {
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5); }
   .featured-posts .grid-noticias .post-item.featured {
-    height: 142px; }
-  .featured-posts .no-pad {
-    display: flex;
-    flex-direction: row; }
+    height: 142px;
+    margin-right: 8px; }
   .featured-posts .grid-noticias .post-item {
     width: 240px;
     height: 142px;
     margin-bottom: 0; }
-  .featured-posts .grid-noticias .post-item:not(:last-of-type) {
+  .featured-posts .miniaturas .grid-50:not(:last-of-type) .post-item {
+    margin-right: 8px; }
+  .featured-posts .grid-noticias .miniaturas .post-item:not(:last-of-type) {
     margin-right: 8px; }
   .grid-noticias .post-item.featured h3 {
     font-size: 14px;
     line-height: 16px; } }
+
+@media (min-width: 768px) {
+  .featured-posts .miniaturas .grid-50:nth-of-type(2n) .post-item {
+    margin-left: 15px; } }
 
 /* PodCasts */
 .section-podcast {
