--- a/src/scss/_gerais.scss
+++ b/src/scss/_gerais.scss
@@ -11,6 +11,16 @@
     margin: 0 auto;
 }
 
+.content .chapeu {
+    color: $mfm-roxo;
+    width: 100%;
+}
+
+.content .chapeu h1 {
+    font-size: 46px;
+    font-weight: 900;
+}
+
 .section {
     float: left;
     width: 100%;
@@ -355,38 +365,38 @@ input[type="range"]::-moz-focus-outer {
 
 .tooltip .tooltiptext {
     visibility: hidden;
-    width: 120px;
+    //width: 120px;
     background-color: #555;
     color: #fff;
     text-align: center;
-    padding: 5px 0;
+    padding: 5px 10px;
     border-radius: 6px;
     /* Position the tooltip text */
     position: absolute;
     z-index: 1;
-    bottom: -55%;
+    top: -70%;
     left: 50%;
     margin-left: -60px;
     /* Fade in tooltip */
     opacity: 0;
     transition: opacity 0.3s;
+    white-space: nowrap;
 }
 
 
 /* Tooltip arrow */
 
-.tooltip .tooltiptext::after {
-    content: "";
-    position: absolute;
-    bottom: 100%;
-    left: 50%;
-    transform: rotate(180deg);
-    margin-left: -5px;
-    border-width: 5px;
-    border-style: solid;
-    border-color: #555 transparent transparent transparent;
-}
-
+// .tooltip .tooltiptext::after {
+//     content: "";
+//     position: absolute;
+//     top: 100%;
+//     left: 50%;
+//     transform: rotate(0deg);
+//     margin-left: -5px;
+//     border-width: 5px;
+//     border-style: solid;
+//     border-color: #555 transparent transparent transparent;
+// }
 
 /* Show the tooltip text when you mouse over the tooltip container */
 
