--- a/src/scss/_podcasts.scss
+++ b/src/scss/_podcasts.scss
@@ -1,54 +1,29 @@
-/* PodCasts */
+/* PodCasts 
+************/
 
 .section-podcast {
     padding: 20px 0;
     background-color: $mfm-cinza-claro;
-    background-image: url('../images/logo-secao-cinza.png');
-    background-repeat: no-repeat;
-    background-position: bottom -50px right -50px;
     min-height: 600px;
     overflow: hidden;
 }
 
-.section.noticias .content {
+.section-podcast .content {
     padding: 20px 0;
 }
 
-.section-podcast .logo-section {
-    position: relative;
-    text-align: left;
-    margin-bottom: -40px;
-    z-index: 0;
-}
-
-.section-podcast .logo-section img {
-    margin-top: -100px;
-}
-
-.section-podcast .logo-section .titulo {
-    position: absolute;
-    top: 0;
-    width: 100%;
-    text-align: center;
-}
-
-.section-podcast .logo-section .titulo h1 {
-    font-size: 48px;
-    font-weight: 900;
-}
-
-.section-podcast header .title {
-    z-index: 1;
+.section-podcast header {
+    flex-wrap: wrap;
 }
 
 .podcast-box {
     display: grid;
-    grid-template-areas: "banner plataformas" "banner lista";
-    grid-template-rows: 10% 90%;
+    grid-template-areas: "banner lista" "plataformas lista";
+    grid-template-rows: 80% 20%;
     grid-template-columns: 217px auto;
     max-height: 620px;
     background-color: $white;
-    overflow: hidden;
+    //overflow: hidden;
     border-radius: 15px;
     margin: 50px 0;
     box-shadow: 0px 0px 10px 10px rgba(0, 0, 0, 0.1);
@@ -56,17 +31,19 @@
 
 .section-podcast .plataformas {
     display: flex;
+    flex-wrap: wrap;
     grid-area: plataformas;
-    justify-self: end;
-    align-self: center;
-    margin-right: 10px;
+    justify-content: flex-start;
+    align-content: center;
     align-items: center;
+    padding: 10px;
+    z-index: 2;
 }
 
 .section-podcast .plataformas h2 {
     color: $mfm-roxo;
     font-size: 16px;
-    margin: 0px 10px;
+    margin: 0px 5px;
 }
 
 .section-podcast .plataformas img {
@@ -76,6 +53,8 @@
 
 .podcast-banner {
     grid-area: banner;
+    grid-row-start: banner;
+    grid-row-end: plataformas;
     background: url('../images/bg-banner-podcast.png') no-repeat;
     display: grid;
     grid-template-areas: "title" "logo" "microfone";
@@ -244,33 +223,26 @@
 
 .podcast-list {
     //border: 1px solid $mfm-amarelo;
-    -webkit-box-shadow: 0px 0px 6px rgba(0, 0, 0, .5) inset;
-    -moz-box-shadow: 0px 0px 6px rgba(0, 0, 0, .5) inset;
-    -ms-box-shadow: 0px 0px 6px rgba(0, 0, 0, .5) inset;
-    -o-box-shadow: 0px 0px 6px rgba(0, 0, 0, .5) inset;
-    box-shadow: 0px 0px 6px rgba(0, 0, 0, .5) inset;
-    border-bottom-right-radius: 10px;
     grid-area: lista;
     overflow-x: hidden;
     overflow-y: scroll;
     margin: 10px;
     margin-left: 50px;
-    scrollbar-color: $mfm-amarelo $mfm-roxo !important;
+    scrollbar-color: $mfm-cinza-claro $white !important;
     scrollbar-width: thin !important;
     display: flex;
 }
 
 .podcast-list::-webkit-scrollbar {
-    width: 10px;
+    width: 15px;
     height: 10px;
 }
 
 .podcast-list::-webkit-scrollbar-thumb {
-    -webkit-border-radius: 5px;
-    border-radius: 5px;
-    background: $mfm-amarelo;
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+    -webkit-border-radius: 13px;
+    border-radius: 13px;
+    background: rgba($color: $mfm-cinza, $alpha: .7) // -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+    // box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
 }
 
 .podcast-list ul {
