Finalizado sessão Programação

--- a/src/scss/_gerais.scss
+++ b/src/scss/_gerais.scss
@@ -139,7 +139,7 @@ header {
 }
 
 .inside .box-details-info {
-    color: $mfm-amarelo;
+    color: $white;
     position: relative;
     z-index: 2;
     opacity: 0;
