--- a/src/css/style.css
+++ b/src/css/style.css
@@ -332,7 +332,7 @@ header {
   transform: translate(0, 50%); }
 
 .inside .box-details-info {
-  color: #fff203;
+  color: #ffffff;
   position: relative;
   z-index: 2;
   opacity: 0;
@@ -1521,7 +1521,7 @@ input[type="range"]::-moz-focus-outer {
   padding: 20px 0;
   background: #feef0e;
   overflow: hidden;
-  margin-bottom: 40px; }
+  padding-bottom: 40px; }
 
 .section.noticias .content {
   padding: 20px 0; }
@@ -1891,10 +1891,10 @@ input[type="range"]::-moz-focus-outer {
 @media screen and (max-width: 767px) {
   .podcast-banner {
     display: none; }
-  .section-podcast .plataformas,
-  .podcast-list {
-    grid-column-start: 1;
-    grid-column-end: 3; }
+  .podcast-box {
+    grid-template-areas: "plataformas" "lista";
+    grid-template-rows: 10% 90%;
+    grid-template-columns: auto; }
   .podcast-list {
     margin-left: 10px;
     border-bottom-left-radius: 10px; }
@@ -1917,51 +1917,11 @@ input[type="range"]::-moz-focus-outer {
 ***************/
 .section.programacao {
   padding: 20px 0;
-  background: url("../images/BACKGROUND-programacao.png") top left/contain no-repeat;
   overflow: hidden;
   margin-bottom: 40px; }
 
 .section.programacao .content {
   padding: 20px 0; }
-
-.programacao .logo-section {
-  display: grid;
-  justify-content: center;
-  grid-template-areas: "logo" "titulo";
-  grid-template-rows: 30px auto; }
-
-.programacao .logo-section .header-img {
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  grid-area: logo;
-  grid-row-start: logo;
-  grid-row-end: titulo; }
-
-.programacao .logo-section img {
-  margin-top: -100px; }
-
-.programacao .logo-section .header {
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  flex-wrap: wrap;
-  grid-area: titulo;
-  grid-column-start: 1;
-  grid-column-end: 2;
-  width: 100%;
-  max-width: 520px; }
-
-.programacao .logo-section .header h1 {
-  font-size: 48px;
-  font-weight: 900; }
-
-.programacao .logo-section .header p {
-  font-family: "Open Sans";
-  color: #606060;
-  font-size: 18px;
-  font-weight: 400;
-  text-align: center; }
 
 /* Tab Programação
 *******************/
@@ -1991,37 +1951,32 @@ input[type="range"]::-moz-focus-outer {
   cursor: pointer;
   font-size: 18px;
   text-transform: uppercase;
-  color: #606060;
+  color: #ffffff;
   display: flex;
   width: 100%;
   height: 100%;
-  justify-content: flex-start;
+  justify-content: center;
   align-content: center;
   padding: 10px;
-  background-image: linear-gradient(to left, transparent, transparent 50%, #e8b200 52%, #fff203);
-  background-position: 100% 0;
-  background-size: 200% 100%;
-  transition: all .25s ease-in;
-  margin: 5px 0; }
+  background: #6318af;
+  border-radius: 30px;
+  transition: all .3s ease-in-out;
+  margin: 5px 10px; }
 
 .tab-programacao .btns-box .tab-buttons .tab-btn.active-btn {
-  background-image: linear-gradient(to left, transparent, transparent 50%, #e8b200 50%, #fff203);
-  background-position: 0 0;
-  animation-name: tab-slide-in;
-  animation-duration: .5s; }
+  color: #6318af;
+  background: #fff203; }
 
 .tab-programacao .btns-box .tab-buttons .tab-btn:hover {
-  background-position: 0 -100%; }
-
-.tab-programacao .btns-box .tab-buttons .tab-btn:not(:last-of-type) {
-  border-right: 1px solid #606060; }
+  color: #6318af;
+  background: #fff203; }
 
 .tab-programacao .tabs-content {
   grid-area: tabs-content; }
 
 .tab-programacao .tabs-content {
   max-width: 100%;
-  max-height: 650px;
+  max-height: 700px;
   overflow-y: scroll;
   scrollbar-color: #fff203 #6318af !important;
   scrollbar-width: thin !important; }
@@ -2052,7 +2007,7 @@ input[type="range"]::-moz-focus-outer {
 .card-programa {
   display: flex;
   flex-wrap: no-wrap;
-  margin: 0px 10px 10px 0px;
+  margin: 0px 10px 30px 0px;
   height: 200px; }
 
 .card-programa .cover-img {
