--- a/src/scss/_noticias.scss
+++ b/src/scss/_noticias.scss
@@ -3,7 +3,7 @@
     background: $mfm-amarelo2;
     //min-height: 600px;
     overflow: hidden;
-    margin-bottom: 40px;
+    padding-bottom: 40px;
 }
 
 .section.noticias .content {
