--- a/src/scss/_podcasts.scss
+++ b/src/scss/_podcasts.scss
@@ -290,11 +290,16 @@
     .podcast-banner {
         display: none;
     }
-    .section-podcast .plataformas,
-    .podcast-list {
-        grid-column-start: 1;
-        grid-column-end: 3;
+    .podcast-box {
+        grid-template-areas: "plataformas" "lista";
+        grid-template-rows: 10% 90%;
+        grid-template-columns: auto;
     }
+    // .section-podcast .plataformas,
+    // .podcast-list {
+    //     grid-column-start: 1;
+    //     grid-column-end: 3;
+    // }
     .podcast-list {
         margin-left: 10px;
         border-bottom-left-radius: 10px;
