--- a/src/scss/_programacao.scss
+++ b/src/scss/_programacao.scss
@@ -3,7 +3,6 @@
 
 .section.programacao {
     padding: 20px 0;
-    background: url('../images/BACKGROUND-programacao.png') top left/ contain no-repeat;
     //min-height: 600px;
     overflow: hidden;
     margin-bottom: 40px;
@@ -11,52 +10,6 @@
 
 .section.programacao .content {
     padding: 20px 0;
-}
-
-.programacao .logo-section {
-    display: grid;
-    justify-content: center;
-    grid-template-areas: "logo" "titulo";
-    //grid-template-columns: auto;
-    grid-template-rows: 30px auto;
-}
-
-.programacao .logo-section .header-img {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    grid-area: logo;
-    grid-row-start: logo;
-    grid-row-end: titulo;
-}
-
-.programacao .logo-section img {
-    margin-top: -100px;
-}
-
-.programacao .logo-section .header {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    flex-wrap: wrap;
-    grid-area: titulo;
-    grid-column-start: 1;
-    grid-column-end: 2;
-    width: 100%;
-    max-width: 520px;
-}
-
-.programacao .logo-section .header h1 {
-    font-size: 48px;
-    font-weight: 900;
-}
-
-.programacao .logo-section .header p {
-    font-family: $font-open-sans;
-    color: $mfm-cinza;
-    font-size: 18px;
-    font-weight: 400;
-    text-align: center;
 }
 
 
@@ -93,33 +46,27 @@
     cursor: pointer;
     font-size: 18px;
     text-transform: uppercase;
-    color: $mfm-cinza;
+    color: $white;
     display: flex;
     width: 100%;
     height: 100%;
-    justify-content: flex-start;
+    justify-content: center;
     align-content: center;
     padding: 10px;
-    background-image: linear-gradient(to left, transparent, transparent 50%, $mfm-laranja 52%, $mfm-amarelo);
-    background-position: 100% 0;
-    background-size: 200% 100%;
-    transition: all .25s ease-in;
-    margin: 5px 0;
+    background: $mfm-roxo;
+    border-radius: 30px;
+    transition: all .3s ease-in-out;
+    margin: 5px 10px;
 }
 
 .tab-programacao .btns-box .tab-buttons .tab-btn.active-btn {
-    background-image: linear-gradient(to left, transparent, transparent 50%, $mfm-laranja 50%, $mfm-amarelo);
-    background-position: 0 0;
-    animation-name: tab-slide-in;
-    animation-duration: .5s;
+    color: $mfm-roxo;
+    background: $mfm-amarelo;
 }
 
 .tab-programacao .btns-box .tab-buttons .tab-btn:hover {
-    background-position: 0 -100%;
-}
-
-.tab-programacao .btns-box .tab-buttons .tab-btn:not(:last-of-type) {
-    border-right: 1px solid $mfm-cinza;
+    color: $mfm-roxo;
+    background: $mfm-amarelo;
 }
 
 .tab-programacao .tabs-content {
@@ -128,7 +75,7 @@
 
 .tab-programacao .tabs-content {
     max-width: 100%;
-    max-height: 650px;
+    max-height: 700px;
     overflow-y: scroll;
     scrollbar-color: $mfm-amarelo $mfm-roxo !important;
     scrollbar-width: thin !important;
@@ -165,7 +112,7 @@
 .card-programa {
     display: flex;
     flex-wrap: no-wrap;
-    margin: 0px 10px 10px 0px;
+    margin: 0px 10px 30px 0px;
     //border: 1px solid $mfm-cinza;
     height: 200px;
 }
