--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1585,25 +1585,6 @@ input[type="range"]::-moz-focus-outer {
   justify-content: center;
   text-align: center; }
 
-.bnt-enviar {
-  cursor: pointer;
-  border: none;
-  color: #fff203;
-  font-size: 14px;
-  font-weight: 700;
-  border-radius: 5px;
-  padding: 10px 40px;
-  width: inherit;
-  margin: 0px auto; }
-
-.bnt-enviar:hover {
-  color: #ffffff;
-  -webkit-box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12), 0px 3px 1px -2px rgba(0, 0, 0, 0.12), 0px 1px 5px 0px rgba(0, 0, 0, 0.2);
-  -moz-box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12), 0px 3px 1px -2px rgba(0, 0, 0, 0.12), 0px 1px 5px 0px rgba(0, 0, 0, 0.2);
-  -ms-box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12), 0px 3px 1px -2px rgba(0, 0, 0, 0.12), 0px 1px 5px 0px rgba(0, 0, 0, 0.2);
-  -o-box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12), 0px 3px 1px -2px rgba(0, 0, 0, 0.12), 0px 1px 5px 0px rgba(0, 0, 0, 0.2);
-  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12), 0px 3px 1px -2px rgba(0, 0, 0, 0.12), 0px 1px 5px 0px rgba(0, 0, 0, 0.2); }
-
 @media screen and (max-width: 767px) {
   .grid-noticias {
     display: flex;
@@ -2038,7 +2019,8 @@ input[type="range"]::-moz-focus-outer {
 /* Peça sua música
 *******************/
 .section.pecaSuaMusica {
-  background: url("../images/bg-gradiente.png") top left/cover no-repeat;
+  background: #b31e8e;
+  background: radial-gradient(circle, #b31e8e 0%, #623c97 100%);
   min-height: 500px;
   display: grid;
   grid-template-areas: "card";
@@ -2088,14 +2070,7 @@ input[type="range"]::-moz-focus-outer {
 
 .pecaSuaMusica .bnt-enviar {
   cursor: pointer;
-  border: none;
-  color: #fff203;
-  font-size: 14px;
-  font-weight: 700;
-  border-radius: 5px;
-  padding: 10px 40px;
-  width: inherit;
-  margin: 0px auto; }
+  border: none; }
 
 /* Rodapé
 ***********/
