--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2131,6 +2131,9 @@ input[type="range"]::-moz-focus-outer {
   display: flex;
   justify-content: center; }
 
+.rodape .row-logo img {
+  max-width: 150px; }
+
 /* Players 
 ***********/
 /* Player Rodapé 
