--- a/src/scss/_player.scss
+++ b/src/scss/_player.scss
@@ -22,9 +22,9 @@
 .section.player {
     grid-area: player;
     overflow: hidden;
-    background: url('../images/logo-bg-player.png') no-repeat left 40px top -10px, -webkit-gradient(linear, left top, right top, from(rgba($color: $mfm-roxo, $alpha: .9)), to(rgba($color: $mfm-magenta, $alpha: .9))) repeat-x;
-    background: url('../images/logo-bg-player.png') no-repeat left 40px top -10px, linear-gradient(90deg, rgba($color: $mfm-roxo, $alpha: .9), rgba($color: $mfm-magenta, $alpha: .9)) repeat-x;
-    //min-height: 20vh;
+    background: -webkit-gradient(linear, left top, right top, from(rgba($color: $mfm-roxo, $alpha: 1)), to(rgba($color: $mfm-magenta, $alpha: 1))) repeat-x;
+    background: linear-gradient(90deg, rgba($color: $mfm-roxo, $alpha: 1), rgba($color: $mfm-magenta, $alpha: 1)) repeat-x;
+    height: 100px;
 }
 
 .section.player .titulo-img {
@@ -56,7 +56,6 @@
     flex-wrap: wrap;
     justify-content: center;
     align-content: center;
-    margin: 10px 0px;
 }
 
 .player-box span {
@@ -67,21 +66,23 @@
     display: flex;
     justify-content: center;
     align-content: center;
-    max-height: 88px;
-    padding: 0px 10px;
-    margin: auto 10px;
+    align-self: center;
+    max-width: 98px;
+    padding: 10px;
 }
 
 .player-box .box-logo-play img {
-    max-width: 88px;
+    //max-width: 68px;
     z-index: 2;
 }
 
 .player-box .box-logo-play span {
     color: $white;
+    display: flex;
+    align-items: center;
     font-weight: 200;
-    font-size: 64px;
-    margin: auto 0px auto -15px;
+    font-size: 58px;
+    margin-left: -15px;
 }
 
 .player-box .player-title-control {
@@ -89,6 +90,8 @@
     margin: 0px 10px;
     flex-wrap: wrap;
     justify-content: center;
+    align-content: center;
+    align-items: center;
 }
 
 .player-box .player-info {
@@ -109,6 +112,11 @@
 }
 
 .player-box .player-info-control {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
     padding: 10px;
 }
 
@@ -116,12 +124,12 @@
     display: grid;
     grid-template-areas: "seekbar seekbar" "current-duration total-duration";
     grid-template-columns: 50% 50%;
+    width: 100%;
 }
 
 .player-box .player-info-control .progresso .seekbar {
     grid-area: seekbar;
     width: 100%;
-    margin: 12px 0 0;
     padding: 10px 0px 5px;
 }
 
@@ -145,7 +153,7 @@
 
 .player-info-control .volume-control {
     display: flex;
-    padding: 10px 0px;
+    padding: 10px 0px 0px;
     align-items: center;
     justify-content: space-between;
 }
@@ -157,7 +165,9 @@
 }
 
 .player-box .player-anuncio {
-    margin: auto 10px;
+    display: flex;
+    max-height: 75px;
+    align-self: center;
 }
 
 
@@ -227,10 +237,16 @@
 .section.player.minimized .player-box .player-info-control {
     display: flex;
     padding: 5px;
+    flex-direction: row;
+}
+
+.section.player.minimized .player-info-control .progresso {
+    width: initial;
 }
 
 .section.player.minimized .player-info-control .volume-control {
     margin-left: 10px;
+    padding: 10px 0px;
 }
 
 .section.player.minimized .player-info-control .volume-control span {
